styling the links and used box shadows rather than borders to prevent shifting when mousing over

--- a/css/index.css
+++ b/css/index.css
@@ -192,7 +192,16 @@ section:not(:last-child)::after {
 
 .contact-section {
   text-align: center;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 80px; /* extra white space at bottom */
+}
+
+.email-link, .social-link {
+  margin: auto;
 }
 
 .social-header {
@@ -200,21 +209,22 @@ section:not(:last-child)::after {
   font-size: .95em;
 }
 
-.email {
+/*.email {
   margin: auto;
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
-}
+}*/
 
 .email-link {
-  margin-top: 10px;
+  margin: 10px 0 25px 0;
 }
 
 .social {
   margin: auto;
   display: flex;
   flex-direction: column;
+  line-height: 2;
 }
 
 .social-link:first-of-type {
@@ -223,7 +233,6 @@ section:not(:last-child)::after {
 
 .social-link {
   /*margin: 15px 0 0 0;*/
-  line-height: 2.3;
 }
 
 .contact-section strong {
@@ -240,4 +249,19 @@ section:not(:last-child)::after {
 .contact-section a:visited {
   text-decoration: none;
   color: #333333;
+}
+
+.contact-section a:hover > strong {
+  /*color: #333333;*/
+  color: #333;
+}
+
+.contact-section a:hover {
+  /*border-bottom: 2px solid #333;*/
+  /*border-color: transparent;*/
+  box-shadow: inset 0 -2px 0 0 #333; /* emulate the border */
+}
+
+.email-link:hover {
+  /*padding-bottom: 10px;*/
 }
